# yet_another_rust_vpn

./: .gitignore  .rustfmt.toml  Cargo.toml
client/: Cargo.toml
client/src/: main.rs  route_setup.rs  setup.rs
server/: Cargo.toml
server/src/: main.rs  route_setup.rs  vpn_client.rs  vpn_service.rs  vpn_state.rs
shared/: Cargo.toml
shared/src/: config.rs  ipv4_pool.rs  ipv6_pool.rs  lib.rs  udp_id.rs
