[workspace]
resolver = "3"
members = ["client", "server", "shared"]

[profile.dev]
incremental = true
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 0
debug = 0

[workspace.dependencies]
tokio = { version = "*", features = ["full"] }
anyhow = { version = "*" }
smoltcp = { version = "*" }
tun-rs = { version = "*", features = ["async"] }
shared = { path = "shared" }

