[workspace]
resolver = "3"
members = ["client", "server", "shared"]

[profile.dev]
incremental = true
opt-level = 0
debug = 0

[profile.dev.package."*"]
opt-level = 0
debug = 0

[workspace.dependencies]
shared = { path = "shared" }

tokio = { version = "*", features = ["full"] }
anyhow = { version = "*" }
smoltcp = { version = "*" }
tun-rs = { version = "*", features = ["async"] }
rand = { version = "*" }

dotenv = { version = "*" }
envy =  { version = "*" }
serde = { version = "*", features = ["derive"] }

