[workspace]
resolver = "2"
members = ["client", "server", "shared"]

[workspace.dependencies]
anyhow = { version = "*" }
dotenv = { version = "*" }
envy = { version = "*" }
rand = { version = "*" }
serde = { version = "*", features = ["derive"] }
shared = { path = "shared" }
smoltcp = { version = "*" }
tokio = { version = "*", features = ["full"] }
tun-rs = { version = "*", features = ["async"] }
